[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/buttons/restart.svg" type="Texture" id=1]
[ext_resource path="res://textures/buttons/exit.svg" type="Texture" id=2]
[ext_resource path="res://textures/buttons/mask.png" type="BitMap" id=3]
[ext_resource path="res://addons/utils/button_highlighter.gd" type="Script" id=4]
[ext_resource path="res://textures/buttons/options.svg" type="Texture" id=5]
[ext_resource path="res://textures/buttons/play.svg" type="Texture" id=6]
[ext_resource path="res://resources/themes/font_medium.tres" type="Theme" id=7]
[ext_resource path="res://addons/simple-gui-transitions/transition.gd" type="Script" id=8]
[ext_resource path="res://scenes/gui/pause/pause.gd" type="Script" id=9]
[ext_resource path="res://textures/buttons/button_focus.svg" type="Texture" id=10]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=11]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 9 )

[node name="GuiTransition" type="Node" parent="."]
script = ExtResource( 8 )
layout = NodePath("..")
controls = [ NodePath("../MarginContainer/VBoxContainer/Label"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer/ButtonResume"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer2/ButtonQuit"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer2/ButtonRestart"), NodePath("../MarginContainer/VBoxContainer/HBoxContainer2/ButtonOptions") ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme = ExtResource( 7 )
text = "Paused"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 1240.0
margin_bottom = 455.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 410.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonResume" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 825.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 10 )
texture_click_mask = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonResume"]
script = ExtResource( 4 )

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 829.0
margin_right = 1240.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 459.0
margin_right = 1240.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 499.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ButtonQuit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 244.0
margin_bottom = 181.0
focus_neighbour_right = NodePath("../ButtonRestart")
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 10 )
texture_click_mask = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer2/ButtonQuit"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 248.0
margin_right = 493.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonRestart" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 497.0
margin_right = 742.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 10 )
texture_click_mask = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer2/ButtonRestart"]
script = ExtResource( 4 )

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 746.0
margin_right = 991.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonOptions" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 995.0
margin_right = 1240.0
margin_bottom = 181.0
focus_neighbour_left = NodePath("../ButtonRestart")
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 10 )
texture_click_mask = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer2/ButtonOptions"]
script = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
